--- a/instacart_1/takehomefile.ipynb
+++ b/instacart_1/takehomefile.ipynb
@@ -138,7 +138,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "yTxJm6YoWAAL",
         "outputId": "0fd1cc9a-ff5d-4ece-dc4e-c9e26b2e2ef0"
@@ -1299,7 +1299,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "Bw2Qw1YqYz-s",
         "outputId": "2a4adc06-1d0c-4531-8b47-6fdfb2138fb6"
@@ -2155,7 +2155,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "mVNgd2Hxa-7t",
         "outputId": "8b187d1c-16fd-41d1-9ed4-a9d18ad4f5c2"
@@ -2524,7 +2524,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "f982dd40",
         "outputId": "64b21ba2-c7fa-4da8-a37b-a3c3c32c00e3"
@@ -5220,7 +5220,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 771
+          "height": 770
         },
         "id": "Z5-DDcAinLaJ",
         "outputId": "c3bd1a7a-cf66-49ff-9c8f-92759f15a4bd"
@@ -5715,7 +5715,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 771
+          "height": 770
         },
         "id": "deabded5",
         "outputId": "a219fe7f-8c3a-44a4-a81a-24ba873f9f2e"
@@ -6177,7 +6177,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 717
+          "height": 535
         },
         "id": "RbeNCDMfyir8",
         "outputId": "3bebdcc7-dac5-4a1f-c525-0e09ad639b17"
@@ -6569,7 +6569,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 682
+          "height": 481
         },
         "id": "40eff31f",
         "outputId": "ce193720-0063-4160-9692-cbeb881dcc61"
@@ -6680,7 +6680,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "6d577486",
         "outputId": "b4eb072c-fc8c-4f2b-c37f-83843307b76a"
@@ -12854,12 +12854,109 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Rating Regression"
+        "## Rating Regression\n",
+        "- IVs: type of issue, hour of day\n",
+        "- DV: Rating\n",
+        "- Control: region\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "RZcLKQc7UHVv"
       },
       "id": "RZcLKQc7UHVv"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e5322acd",
+        "outputId": "dbb0b1d3-2096-4de7-bb6d-ecde434713bd"
+      },
+      "source": [
+        "import statsmodels.formula.api as smf\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Ensure order delivery time is in datetime format and extract hour\n",
+        "df['order delivery time'] = pd.to_datetime(df['order delivery time'], errors='coerce', utc=True)\n",
+        "df['hour'] = df['order delivery time'].dt.hour\n",
+        "\n",
+        "# Define time block logic\n",
+        "def get_time_block(h):\n",
+        "    if 6 <= h < 11:\n",
+        "        return 'Morning'\n",
+        "    elif 11 <= h < 14:\n",
+        "        return 'Lunch'\n",
+        "    elif 14 <= h < 17:\n",
+        "        return 'Afternoon'\n",
+        "    elif 17 <= h < 21:\n",
+        "        return 'Dinner'\n",
+        "    else:\n",
+        "        return 'Late Night'\n",
+        "\n",
+        "# Apply logic to create time_block column\n",
+        "df['time_block'] = df['hour'].apply(get_time_block)\n",
+        "\n",
+        "# Define the regression formula with the new time_block variable\n",
+        "# We use Q() to handle column names with spaces\n",
+        "formula = 'Q(\"customer order rating\") ~ C(Q(\"type of issue reported\")) + C(time_block) + C(region)'\n",
+        "\n",
+        "# Fit the OLS model\n",
+        "model = smf.ols(formula=formula, data=df).fit()\n",
+        "\n",
+        "# Display the summary\n",
+        "print(model.summary())"
+      ],
+      "id": "e5322acd",
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                OLS Regression Results                                \n",
+            "======================================================================================\n",
+            "Dep. Variable:     Q(\"customer order rating\")   R-squared:                       0.075\n",
+            "Model:                                    OLS   Adj. R-squared:                  0.065\n",
+            "Method:                         Least Squares   F-statistic:                     7.910\n",
+            "Date:                        Wed, 17 Dec 2025   Prob (F-statistic):           2.46e-13\n",
+            "Time:                                05:23:47   Log-Likelihood:                -1713.0\n",
+            "No. Observations:                        1087   AIC:                             3450.\n",
+            "Df Residuals:                            1075   BIC:                             3510.\n",
+            "Df Model:                                  11                                         \n",
+            "Covariance Type:                    nonrobust                                         \n",
+            "==============================================================================================================================\n",
+            "                                                                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------------------------------------------------------\n",
+            "Intercept                                                      3.2340      0.154     21.065      0.000       2.933       3.535\n",
+            "C(Q(\"type of issue reported\"))[T.Item charged incorrectly]     1.2217      0.267      4.579      0.000       0.698       1.745\n",
+            "C(Q(\"type of issue reported\"))[T.Item missing]                 0.0360      0.112      0.321      0.748      -0.184       0.256\n",
+            "C(Q(\"type of issue reported\"))[T.Other Order Issue]            0.2088      0.266      0.785      0.432      -0.313       0.730\n",
+            "C(Q(\"type of issue reported\"))[T.Poor replacement]            -0.3852      0.176     -2.189      0.029      -0.730      -0.040\n",
+            "C(Q(\"type of issue reported\"))[T.Poor service]                -0.3224      0.125     -2.577      0.010      -0.568      -0.077\n",
+            "C(Q(\"type of issue reported\"))[T.Wrong item]                   0.2745      0.092      2.980      0.003       0.094       0.455\n",
+            "C(time_block)[T.Dinner]                                        0.0470      0.159      0.295      0.768      -0.265       0.359\n",
+            "C(time_block)[T.Late Night]                                   -0.3408      0.150     -2.279      0.023      -0.634      -0.047\n",
+            "C(time_block)[T.Lunch]                                     -5.208e-16   2.11e-16     -2.470      0.014   -9.35e-16   -1.07e-16\n",
+            "C(time_block)[T.Morning]                                      -0.3423      0.551     -0.622      0.534      -1.423       0.738\n",
+            "C(region)[T.nyc]                                              -0.2167      0.129     -1.674      0.094      -0.471       0.037\n",
+            "C(region)[T.sf]                                               -0.1352      0.090     -1.510      0.131      -0.311       0.040\n",
+            "==============================================================================\n",
+            "Omnibus:                       57.875   Durbin-Watson:                   0.160\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               24.904\n",
+            "Skew:                          -0.123   Prob(JB):                     3.91e-06\n",
+            "Kurtosis:                       2.300   Cond. No.                     1.70e+17\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The smallest eigenvalue is 8.5e-32. This might indicate that there are\n",
+            "strong multicollinearity problems or that the design matrix is singular.\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
