--- a/instacart_1/takehomefile.ipynb
+++ b/instacart_1/takehomefile.ipynb
@@ -19948,26 +19948,18 @@
         "**Proposed Shift Schedule (CST)**\n",
         "| Shift Name            | Time (CST)        | Staff Count | Focus Area                                                                 |\n",
         "|-----------------------|-------------------|-------------|-----------------------------------------------------------------------------|\n",
-        "| Night Watch (Peak)    | 23:00 – 07:00     | 3 Agents    | Covers the critical 00:00–05:00 window where demand hits 10+ calls/hr.      |\n",
+        "| Night Watch (Peak)    | 23:00 – 07:00     | 2 Agents + 1 Part-time 00:00 - 4:00    | Covers the critical 00:00–05:00 window where demand hits 10+ calls/hr.      |\n",
         "| Morning Lull          | 07:00 – 15:00     | 1 Agent     | Demand drops to ~5 calls/hr. One agent is sufficient.                       |\n",
         "| Evening Flow          | 15:00 – 23:00     | 2 Agents    | Demand stabilizes at ~7–8 calls/hr. Requires steady coverage.               |\n",
         "\n",
-        "**Total Daily Headcount**: ~6 distinct shifts/day (overlap or part-time adjustments can optimize this further)."
+        "**Total Daily Headcount**: ~6 distinct shifts/day (overlap or part-time adjustments can optimize this further).\n",
+        "\n",
+        "因最需要人手的时段均不是北美常规工作时段，可考虑第三国的电话客服外包服务。"
       ],
       "metadata": {
         "id": "fo2wJmlIldyT"
       },
       "id": "fo2wJmlIldyT"
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dtHsxf9MkFHC"
-      },
-      "id": "dtHsxf9MkFHC",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
